[package]
name = "http-probe"
version = "0.1.0"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = {version = "1.6", features = ["attributes", "unstable"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tide = "0.13"
